--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "TDesign",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/TDesign.js",
+  // "main": "lib/TDesign.js",
+  "main": "lib/index.js",
   "module": "es/index.js",
   "style": "lib/index.css",
   "typings": "lib/index.d.ts",
